@@ -10486,4 +10486,53 @@ Starting byte set: i
  0: ia
  1: 
 
+/(?i)a(?-i)b|c/BZ
+------------------------------------------------------------------
+        Bra
+     NC a
+     00 Opt
+        b
+        Alt
+     00 Opt
+        c
+        Ket
+        End
+------------------------------------------------------------------
+    XabX
+ 0: ab
+    XAbX
+ 0: Ab
+    CcC 
+ 0: c
+    ** Failers
+No match
+    XABX   
+No match
+
+/(?i)a(?s)b|c/BZ
+------------------------------------------------------------------
+        Bra
+     NC a
+     05 Opt
+     NC b
+        Alt
+     05 Opt
+     NC c
+        Ket
+        End
+------------------------------------------------------------------
+
+/(?i)a(?s-i)b|c/BZ
+------------------------------------------------------------------
+        Bra
+     NC a
+     04 Opt
+        b
+        Alt
+     04 Opt
+        c
+        Ket
+        End
+------------------------------------------------------------------
+
 /-- End of testinput2 --/
